netcfg (0.64) UNRELEASED; urgency=low

  * Joshua Kwan
    - Split out all functions into static.c, dhcp.c, wireless.c.
    - Port wireless fixes back to netcfg-static and netcfg-dhcp, which
      have been rather neglected lately.
    - Fix the GO_BACK interaction between WEP and ESSID configuration.
    - Write loopback all the time, even when you abort network config.
      (Closes: #248636)
    - Redesign DHCP strategy with a new template that uses a select,
      allowing the user to clearly alternate to static network config
      (Closes: #244901, #227722)
    - Display a brief note when DHCP lease gets acquired. (Closes: #247751)
    - Now we can ask for a DHCP hostname to add. (Closes: #236533, #239591)
    - If we didn't use one, see if the server is offering us one and seed
      netcfg/get_hostname with it. (Closes: #237395, #240701)
    - Failing that, bring the interface up and try to reverse-resolve
      the IP address into a hostname. 
    - For idempotency reasons, down all interfaces after finding each
      one so that we can start from a clean slate.
    - Silently load af_packet. (Closes: #244441)
    - Add some code hunks from mii-diag to determine code path on link
      connection. (Closes: #247178)
    - Add some ifconfig_up and ifconfig_down functions.
    - Fix a long standing bug in devnames retrieval that did not strip
      newlines from the devnames input and caused cdebconf to screw
      up on subsequent questions.
    - Bump the DHCP wait to 15 seconds. The magic number seems to be just
      over 10 for me. (Closes: #244819)
    - Template cleanups: netcfg/static-title, netcfg/dhcp-title,
      netcfg/internal-pcmcia
    - Add dhcp3-client support.
    - Remove a lot of calls to /sbin/this and /sbin/that in response to Joey's
      rant on debian-boot.

 -- Joshua Kwan <joshk@triplehelix.org>  Sat,  8 May 2004 18:17:05 -0700

netcfg (0.63) unstable; urgency=low

  * Per Olofsson